Bug 304767 - Importing bibtex with new fields doesn't add those fields
Summary: Importing bibtex with new fields doesn't add those fields
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.6
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-08 03:24 UTC by Robby Stephenson
Modified: 2012-08-08 03:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2012-08-08 03:24:52 UTC
Importing a bibtex file that has field data not already present should add those fields to Tellico, but  they are not actually added.

Reproducible: Always

Steps to Reproduce:
1.Import bibtex file with fields not present
2.See debug output adding new fields
3.Notice new fields are not actually added
Comment 1 Robby Stephenson 2012-08-08 03:47:57 UTC
Git commit c428a0d062f0c92dffd3d1b0bff1b8a08cb7fd68 by Robby Stephenson.
Committed on 08/08/2012 at 05:27.
Pushed by rstephenson into branch '2.3'.

Fix bug with adding fields when importing bibtex

The Bibtex importer was not properly adding new fields when reading
Bibtex files. Be sure to properly merge all fields. A test case is
included.
FIXED-IN: 2.3.7

M  +4    -0    ChangeLog
M  +1    -2    src/collections/bibtexcollection.cpp
M  +6    -4    src/tests/bibtextest.cpp
M  +1    -0    src/tests/data/test.bib
M  +4    -0    src/translators/bibteximporter.cpp

http://commits.kde.org/tellico/c428a0d062f0c92dffd3d1b0bff1b8a08cb7fd68