Fix bug with adding fields when importing bibtex

The Bibtex importer was not properly adding new fields when reading
Bibtex files. Be sure to properly merge all fields. A test case is
included.

BUG: 304767
FIXED-IN: 2.3.7